[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://images/starfield.png" type="Texture" id=2]
[ext_resource path="res://shaders/fog.shader" type="Shader" id=3]
[ext_resource path="res://images/fog.png" type="Texture" id=4]
[ext_resource path="res://scenes/DarkCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Selection.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sfx/card-shuffling.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Vector3( 0.15, 0.1, 0.82 )
shader_param/octaves = 4

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Starfield" type="Sprite" parent="."]
position = Vector2( 670, 380 )
z_index = -100
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 2048 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fog" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 630, 370 )
scale = Vector2( 85.625, 78.125 )
z_index = -99
texture = ExtResource( 4 )

[node name="Card1" parent="." instance=ExtResource( 5 )]
position = Vector2( 150, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="Card2" parent="." instance=ExtResource( 5 )]
position = Vector2( 340, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="DiscardPile" parent="." instance=ExtResource( 5 )]
position = Vector2( 530, 630 )
scale = Vector2( 0.7, 0.7 )

[node name="ActivePile" parent="." instance=ExtResource( 5 )]
position = Vector2( 720, 630 )
scale = Vector2( 0.7, 0.7 )
z_index = -10

[node name="Card3" parent="." instance=ExtResource( 5 )]
position = Vector2( 530, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="Card4" parent="." instance=ExtResource( 5 )]
position = Vector2( 720, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="Card5" parent="." instance=ExtResource( 5 )]
position = Vector2( 920, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="Card6" parent="." instance=ExtResource( 5 )]
position = Vector2( 1120, 140 )
scale = Vector2( 0.7, 0.7 )
z_index = -50

[node name="Selection" parent="." instance=ExtResource( 6 )]
position = Vector2( 723, 630 )
scale = Vector2( 0.7, 0.7 )
z_index = 100

[node name="CreditsLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 690.0
margin_right = 143.0
margin_bottom = 723.0
custom_fonts/font = SubResource( 2 )
text = "Credits: 0"

[node name="ComboLabel" type="Label" parent="."]
margin_left = 340.0
margin_top = 640.0
margin_right = 435.0
margin_bottom = 673.0
custom_fonts/font = SubResource( 2 )
text = "Combo: 0"

[node name="MultiplierLabel" type="Label" parent="."]
margin_left = 300.0
margin_top = 690.0
margin_right = 435.0
margin_bottom = 723.0
custom_fonts/font = SubResource( 2 )
text = "Multiplier: 0"

[node name="MessageLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 960.0
margin_top = 660.0
margin_right = 1240.0
margin_bottom = 742.0
custom_fonts/font = SubResource( 2 )
text = "Message"
autowrap = true

[node name="MessageTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SFX" type="Node2D" parent="."]

[node name="DealingCards" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="NextButton" type="Button" parent="."]
margin_left = 510.0
margin_top = 680.0
margin_right = 574.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 3 )
text = "Next"
[connection signal="pressed" from="NextButton" to="." method="on_next_pressed"]
